[project]
name = "musicgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "musicbrainzngs>=0.7.1",
    "networkx[default]>=3.5",
    "pydot>=4.0.1",
]

[dependency-groups]
dev = ["ruff>=0.14.4"]

[tool.ruff.lint]
select = ["I"]
